Added template for team info

--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!DOCTYPE HTML><html><head><title>RSS Team 3</title><link rel="stylesheet" type="text/css" href="./css/style.css"><script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$']],displayMath: [['$$','$$']],skipTags: ["script","noscript","style","textarea","code"]},TeX: {equationNumbers: {autoNumber: "AMS"}}});</script><script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML"></script></head><body><div id="main"><div id="logo"><div id="logo_text"><h1><a href="."><span class="logo_colour">RSS Team 3</span></a></h1><h2>MIT Spring 2019</h2></div></div><div id="header"><div id="menubar"><ul id="menu"><li class="selected"><a href=".">Home</a></li><li class=""><a href="./labs">Labs</a></li><li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Video</a></li><li><a href="https://github.mit.edu/rss2019-3">Github</a></li></ul></div></div><div id="site_content"><div id="content"><h1>RSS Team 3</h1>
-Abbie Lee (abbielee@mit.edu), Alex Cuellar (alexcuel@mit.edu), Kayla Holman (kholman@mit.edu), Kyle Morgenstein (kylem73@mit.edu), Raul Largaespada(rlargaes@mit.edu)
+<h2>Team Members</h2>
+<p>Abbie Lee (abbielee@mit.edu), Alex Cuellar (alexcuel@mit.edu), Kayla Holman (kholman@mit.edu), Kyle Morgenstein (kylem73@mit.edu), Raul Largaespada(rlargaes@mit.edu)
+</p>
+<h2>About Us</h2>
+<h4>Abbie Lee</h4>
+<h4>Alex Cuellar</h4>
+<h4>Kayla Holman</h4>
+<h4>Kyle Morgenstein</h4>
+<h4>Raul Largaespada</h4>
+<p>
+    Hi, I'm Raul and I'm a junior studying 16 and 6-2, with a focus on flight software and GNC. I'm excited to be a part of the
+    course this spring and am looking forward to learning a lot!
+</p>
+
 <h2>Modifying the template</h2>
 You can change the template design as much as you want - in fact we want you to!
 This website is pretty boring right now. Use pictures, videos, gifs and stories from your racecar experience
