--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <h4>Alex Cuellar</h4>
 <h4>Kayla Holman</h4>
 <h4>Kyle Morgenstein</h4>
+    
+<p>
+    My name's Kyle and I'm a junior studying planetary science/geology and aerospace engineering, witha focus on robotics for space exploration. Stoked to make this car go FAST!!
+</p>
 <h4>Raul Largaespada</h4>
 <p>
     Hi, I'm Raul and I'm a junior studying 16 and 6-2, with a focus on flight software and GNC. I'm excited to be a part of the
