--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h4>Kyle Morgenstein</h4>
     
 <p>
-    My name's Kyle and I'm a junior studying planetary science/geology and aerospace engineering, witha focus on robotics for space exploration. Stoked to make this car go FAST!!
+    My name's Kyle and I'm a junior studying planetary science & geology and aerospace engineering, with a focus on robotics for space exploration. Stoked to make this car go FAST!!
 </p>
 <h4>Raul Largaespada</h4>
 <p>
