--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <h4>Abbie Lee</h4>
 <h4>Alex Cuellar</h4>
 <h4>Kayla Holman</h4>
+    <p>
+        Hi! My name's Kayla and I'm a junior studying 2A-6, with specific interests in robotics and autonomous control. 
+        I'm SUPER excited to make a robot that will be smarter than I am!
+    </p>
+    
 <h4>Kyle Morgenstein</h4>
     
 <p>
