--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML><html><head><title>RSS Team 3</title><link rel="stylesheet" type="text/css" href="./css/style.css"><script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$']],displayMath: [['$$','$$']],skipTags: ["script","noscript","style","textarea","code"]},TeX: {equationNumbers: {autoNumber: "AMS"}}});</script><script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML"></script></head><body><div id="main"><div id="logo"><div id="logo_text"><h1><a href="."><span class="logo_colour">RSS Team 3</span></a></h1><h2>MIT Spring 2019</h2></div></div><div id="header"><div id="menubar"><ul id="menu"><li class="selected"><a href=".">Home</a></li><li class=""><a href="./labs">Labs</a></li><li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Video</a></li><li><a href="https://github.mit.edu/rss2019-3">Github</a></li></ul></div></div><div id="site_content"><div id="content"><h1>RSS Team 3</h1>
-<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="./main.js"></script>
 <h2>Team Members</h2>
 <p>Abbie Lee (abbielee@mit.edu), Alex Cuellar (alexcuel@mit.edu), Kayla Holman (kholman@mit.edu), Kyle Morgenstein (kylem73@mit.edu), Raul Largaespada(rlargaes@mit.edu)
 </p>
