--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1><a href="."><span class="logo_colour">RSS Team 3</span></a></h1>
                 <h2>MIT Spring 2019</h2></div>
         </div>
-        <div id="header">
+        <div id="header" style="display: none;">
             <div id="menubar">
                 <ul id="menu">
                     <li class="selected"><a href=".">Home</a></li>
