fixed bugs, fixed labs page, headshots/bios, general improvements

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html>
-
+<!--<div class="youtube-container">
+    <iframe allowFullScreen="allowFullScreen" frameBorder="0" src="https://www.youtube.com/embed/9fzzp6oxid4"></iframe>
+</div>
+-->
 <head>
     <title>RSS Team 3</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -43,36 +46,40 @@
                 </div>
             </header>
             <div id="content">
-                <h2 class="section_heading">Team Members</h2>
+                <h1 class="section_heading">Team Members</h2>
                 </p>
                 <div class="team_member_bio">
+                    <img class="headshot" src="img/Abbie_HS.png">
                     <h4>Abbie Lee</h4>
                     <p class="contact_info">abbielee@mit.edu</p>
-                    <p>Test bio Test bio Test bio Test bio Test bio Test bio Test bio Test bio Test bio 
-                            Test bio Test bio Test bio Test bio Test bio Test bio Test bio 
-                            Test bio Test bio Test bio Test bio Test bio Test bio Test bio 
+                    <p>Hi! My name is Abbie, and I'm currently a junior at MIT studying Aerospace Engineering and Computer Science 
+                        with a focus in autonomous systems. I'm excited about sending smarter robots into space! Outside of classes, 
+                        I'm a member of the Varsity Sailing Team and enjoy experimenting with desserts.
                     </p>
                 </div>
                 <div class="team_member_bio">
                     <h4>Alex Cuellar</h4>
                     <p class="contact_info">alexcuel@mit.edu</p>
-                    <p>Test bio Test bio Test bio Test bio Test bio Test bio Test bio Test bio Test bio 
-                            Test bio Test bio Test bio Test bio Test bio Test bio Test bio 
-                            Test bio Test bio Test bio Test bio Test bio Test bio Test bio 
+                    <p>Salutations! I'm Alex Cuellar, a sophomore studying electrical engineering and computer science.  
+                        My interests surround AI and control systems, both of which are key areas of study in modern 
+                        robotics. I'm excited to spend the semester building a foundation of knowledge of that which 
+                        will one day become our tyrannical overlords!
                     </p>
                 </div>
                 <div class="team_member_bio">
+                    <img class="headshot" src="img/Kayla_HS.jpg">
                     <h4>Kayla Holman</h4>
                     <p class="contact_info">kholman@mit.edu</p>
-                    <p>Hi! My name's Kayla and I'm a junior studying 2A-6, with specific interests in robotics and autonomous control. 
-                        I'm SUPER excited to make a robot that will be smarter than I am!
+                    <p>Hi! My name's Kayla and I'm a junior studying mechanical engineering with computer science, with specific 
+                        interests in robotics and autonomous control. I'm SUPER excited to make a robot that will be smarter than I am!
                     </p>
                 </div>
                 <div class="team_member_bio">
+                    <img class="headshot" src="./img/Kyle_HS.png">
                     <h4>Kyle Morgenstein</h4>
                     <p class="contact_info">kylem73@mit.edu</p>
-                    <p>My name's Kyle and I'm a junior studying 12 and 16-eng, with a focus on robotics for space exploration. Stoked 
-                        to make this car go FAST!!
+                    <p>My name's Kyle and I'm a junior studying Earth, atmospheric, and planetary sciences and aerospace engineering, 
+                        with a focus on robotics for space exploration. Stoked to make this car go FAST!!
                     </p>
                 </div>
                 <div class="team_member_bio">
