--- a/labs/index.html
+++ b/labs/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="main">
         <div id="navbar">
-            <a id = "nav_home" href="."><b>RSS Team 3</b> MIT Spring 2019</a>
+            <a id = "nav_home" href=".."><b>RSS Team 3</b> MIT Spring 2019</a>
             <ul id="nav_list">
                 <li><a href="https://github.mit.edu/rss2019-3">Github</a></li>
                 <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Videos</a></li>
@@ -42,6 +42,39 @@
             </header>
             <div id="content">
                 <h1 class="section_heading">Labs</h1>
+                
+                <div class="lab_link">
+                    <a href="3">
+                        <div class="lab_label">Lab 3</div>
+                        <img class="lab_image" src="../img/test_image.jpg">
+                    </a>
+                </div>
+                <div class="lab_link">
+                        <a href="4">
+                            <div class="lab_label">Lab 4</div>
+                            <img class="lab_image" src="../img/test_image.jpg">
+                        </a>
+                </div>
+                <div class="lab_link">
+                    <a href="5">
+                        <div class="lab_label">Lab 5</div>
+                        <img class="lab_image" src="../img/test_image.jpg">
+                    </a>
+                </div>
+                <div class="lab_link">
+                    <a href="6">
+                        <div class="lab_label">Lab 6</div>
+                        <img class="lab_image" src="../img/test_image.jpg">
+                    </a>
+                </div>
+                <div class="lab_link">
+                        <a href="final">
+                            <div class="lab_label">Final Project</div>
+                            <img class="lab_image" src="../img/test_image.jpg">
+                        </a>
+                </div>
+                
+                <!--
                 <a href="3">Lab 3           : Wall Following</a>
                 <br/>
                 <br/><a href="4">Lab 4           : Visual Servoring</a>
@@ -50,7 +83,7 @@
                 <br/>
                 <br/><a href="6">Lab 6           : Motion Planning and Trajectory Following</a>
                 <br/>
-                <br/><a href="7">Final Challenge : MY CHOSEN CHALLENGE</a>
+                <br/><a href="final">Final Challenge : MY CHOSEN CHALLENGE</a>-->
             </div>
             <footer id="image_footer" class="header_footer">
                 <img class="banner_image" src="../img/Boston_Back_Bay_reflection.jpg" style="top: -75px">
