--- a/labs/3/index.html
+++ b/labs/3/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="main">
         <div id="navbar">
-                <a id = "nav_home" href="."><b>RSS Team 3</b> MIT Spring 2019</a>
+                <a id = "nav_home" href="../.."><b>RSS Team 3</b> MIT Spring 2019</a>
                 <ul id="nav_list">
                     <li><a href="https://github.mit.edu/rss2019-3">Github</a></li>
                     <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Videos</a></li>
