added Alex photo

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     </p>
                 </div>
                 <div class="team_member_bio">
+                    <img class="headshot" src="img/Alex_HS.png">
                     <h4>Alex Cuellar</h4>
                     <p class="contact_info">alexcuel@mit.edu</p>
                     <p>Salutations! I'm Alex Cuellar, a sophomore studying electrical engineering and computer science.  
