--- a/labs/3/index.html
+++ b/labs/3/index.html
@@ -42,6 +42,7 @@
             </header>
             <div id="content">
                 <h1 class="section_heading">Lab 3</h1>
+                <a href="https://docs.google.com/presentation/d/1txmALLao3k31bL29RUoo3xUaZdAJl72Ic9IganGIC3I/edit?usp=sharing">Lab 3 Briefing</a>
             </div>
             <footer id="image_footer" class="header_footer">
                 <img class="banner_image" src="../../img/Boston_Back_Bay_reflection.jpg" style="top: -75px">
