fixed up lab pages

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <img src="./img/Raul_HS.jpg" class="headshot">
                     <h4>Raul Largaespada</h4>
                     <p class="contact_info">rlargaes@mit.edu</p>
-                    <p>Hi, I'm Raul and I'm a junior studying 16 and 6-2, with a focus on flight software and GNC. I'm excited to be a part of the
+                    <p>Hi, I'm Raul and I'm a junior studying aerospace engineering and EECS, with a focus on flight software and GNC. I'm excited to be a part of the
                             course this spring and am looking forward to learning a lot!
                     </p>
                 </div>
