--- a/labs/3/index.html
+++ b/labs/3/index.html
@@ -42,7 +42,11 @@
             </header>
             <div id="content">
                 <h1 class="section_heading">Lab 3</h1>
-                <a href="https://docs.google.com/presentation/d/1txmALLao3k31bL29RUoo3xUaZdAJl72Ic9IganGIC3I/edit?usp=sharing">Lab 3 Briefing</a>
+                    <div class="briefing_wrapper">
+                        <a href="https://docs.google.com/presentation/d/1txmALLao3k31bL29RUoo3xUaZdAJl72Ic9IganGIC3I/edit?usp=sharing">
+                            <div class="briefing_link">Lab 3 Briefing</div>
+                        </a>
+                    </div>
             </div>
             <footer id="image_footer" class="header_footer">
                 <img class="banner_image" src="../../img/Boston_Back_Bay_reflection.jpg" style="top: -75px">
