--- a/labs/index.html
+++ b/labs/index.html
@@ -42,48 +42,40 @@
             </header>
             <div id="content">
                 <h1 class="section_heading">Labs</h1>
-                
-                <div class="lab_link">
-                    <a href="3">
-                        <div class="lab_label">Lab 3</div>
-                        <img class="lab_image" src="../img/test_image.jpg">
-                    </a>
-                </div>
-                <div class="lab_link">
-                        <a href="4">
-                            <div class="lab_label">Lab 4</div>
+                <div class="lab_link_row">
+                    <div class="lab_link">
+                        <a href="3">
+                            <div class="lab_label">Lab 3</div>
+                            <img class="lab_image_true" src="../img/test_image.jpg">
+                        </a>
+                    </div>
+                    <div class="lab_link">
+                            <a href="4">
+                                <div class="lab_label">Lab 4</div>
+                                <img class="lab_image" src="../img/test_image.jpg">
+                            </a>
+                    </div>
+                    <div class="lab_link">
+                        <a href="5">
+                            <div class="lab_label">Lab 5</div>
                             <img class="lab_image" src="../img/test_image.jpg">
                         </a>
+                    </div>
                 </div>
-                <div class="lab_link">
-                    <a href="5">
-                        <div class="lab_label">Lab 5</div>
-                        <img class="lab_image" src="../img/test_image.jpg">
-                    </a>
-                </div>
-                <div class="lab_link">
-                    <a href="6">
-                        <div class="lab_label">Lab 6</div>
-                        <img class="lab_image" src="../img/test_image.jpg">
-                    </a>
-                </div>
-                <div class="lab_link">
-                        <a href="final">
-                            <div class="lab_label">Final Project</div>
+                <div class="lab_link_row">
+                    <div class="lab_link">
+                        <a href="6">
+                            <div class="lab_label">Lab 6</div>
                             <img class="lab_image" src="../img/test_image.jpg">
                         </a>
+                    </div>
+                    <div class="lab_link">
+                            <a href="final">
+                                <div class="lab_label">Final Project</div>
+                                <img class="lab_image" src="../img/test_image.jpg">
+                            </a>
+                    </div>
                 </div>
-                
-                <!--
-                <a href="3">Lab 3           : Wall Following</a>
-                <br/>
-                <br/><a href="4">Lab 4           : Visual Servoring</a>
-                <br/>
-                <br/><a href="5">Lab 5           : Localization</a>
-                <br/>
-                <br/><a href="6">Lab 6           : Motion Planning and Trajectory Following</a>
-                <br/>
-                <br/><a href="final">Final Challenge : MY CHOSEN CHALLENGE</a>-->
             </div>
             <footer id="image_footer" class="header_footer">
                 <img class="banner_image" src="../img/Boston_Back_Bay_reflection.jpg" style="top: -75px">
