fixed a few bugs

--- a/labs/3/index.html
+++ b/labs/3/index.html
@@ -47,6 +47,8 @@
                             <div class="briefing_link">Lab 3 Briefing</div>
                         </a>
                     </div>
+                    <div class="lab_report_content">
+                    </div>
             </div>
             <footer id="image_footer" class="header_footer">
                 <img class="banner_image" src="../../img/Boston_Back_Bay_reflection.jpg" style="top: -75px">
