--- a/labs/index.html
+++ b/labs/index.html
@@ -46,7 +46,7 @@
                     <div class="lab_link">
                         <a href="3">
                             <div class="lab_label">Lab 3</div>
-                            <img class="lab_image_true" src="../img/test_image.jpg">
+                            <img class="lab_image_true" src="../img/lab3/Post-Deriv Trajectory.jpg">
                         </a>
                     </div>
                     <div class="lab_link">
