added link to lab 4 briefing, reformatted html

--- a/labs/4/index.html
+++ b/labs/4/index.html
@@ -42,6 +42,11 @@
             </header>
             <div id="content">
                 <h1 class="section_heading">Lab 4</h1>
+                <div class="briefing_wrapper">
+                    <a href="https://docs.google.com/presentation/d/1SQS6H22EY5mjoWQzFWMTF0kADg9ArY4SAydQYhLais8/edit?usp=sharing" target="_blank">
+                        <div class="briefing_link">Lab 4 Briefing</div>
+                    </a>
+                </div>
             </div>
             <footer id="image_footer" class="header_footer">
                 <img class="banner_image" src="../../img/Boston_Back_Bay_reflection.jpg" style="top: -75px">
