added an image to the labs page

--- a/labs/index.html
+++ b/labs/index.html
@@ -52,7 +52,7 @@
                     <div class="lab_link">
                             <a href="4">
                                 <div class="lab_label">Lab 4</div>
-                                <img class="lab_image" src="../img/test_image.jpg">
+                                <img class="lab_image_true" src="../img/lab4/lab4_img.png">
                             </a>
                     </div>
                     <div class="lab_link">
