added stuff for lab 5

--- a/labs/index.html
+++ b/labs/index.html
@@ -58,7 +58,7 @@
                     <div class="lab_link">
                         <a href="5">
                             <div class="lab_label">Lab 5</div>
-                            <img class="lab_image" src="../img/test_image.jpg">
+                            <img class="lab_image_true" src="../img/lab5/lab_image.png">
                         </a>
                     </div>
                 </div>
