fixed table of contents

--- a/labs/5/index.html
+++ b/labs/5/index.html
@@ -59,13 +59,13 @@
                             <li><a href="#sensor-model">Sensor Model (Alex)</a></li>
                             <ol>
                                 <li><a href="#data-preprocessing">Data Preprocessing (Kyle)</a></li>
-                                <li><a href="#pruning">Particle Pruning (Alex)</a></li>
+                                <li><a href="#pruning">Particle Pruning (Kyle)</a></li>
                             </ol>
                         </ol>
-                        <li><a href='#ros'>ROS Implementation</a></li>
+                        <li><a href='#ros'>ROS Implementation (Alex)</a></li>
                         <li><a href='#sim'>Simulation Results (Abbie)</a></li>
                         <li><a href='#exp'>Experimental Results (Alex)</a></li>
-                        <li><a href='#lab5videos'>Videos</a></li>
+                        <li><a href='#lab5videos'>Videos (Raul)</a></li>
                     </ol>
 
                     <a name='overview-motivation'></a>
